2007-01-30  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Updated copyright notice.

2006-10-16  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp: Removed equation checking here.  It's now done in
	the netlist checker.

	* equation.cpp: New function checking if a given variable name
	is an equation.

	* environment.cpp: Added children funtionality for environments.

	* check_netlist.cpp: Resolving variables in equations.
	Creating a real environment tree.  Checking equtions in all
	subcircuits as well.

2006-10-09  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Fixed a bug in the transient solver occuring
	when a components MNA matrix changes during DC and TR (e.g.
	transmission line).

2006-09-24  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added 'MaxStep' as
	valid property in transient analysis.

2006-09-19  Stefan Jahn  <stefan@lkcc.org>

	* check_mdl.cpp: Translating special variable 'PI'.  Defaulting
	to logarithmic sweep from 1 to 1 if no start/stop can be
	determined.

2006-09-18  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Using new environment functionality in order
	to solve the root environment equations.

	* input.cpp: Passing the netlist checker its environment.

	* evaluate.cpp: Replaced references to static functions of
	the solver.

	* equation.cpp: Removed all global data concerning the
	equations.  Both checker and solver are now fully self-contained
	and can be instantiated as many as needed.  This is one more
	step to local equations in subcircuits.

	* environment.cpp: Added functionality which enables an
	environment to contains equations which can be checked and
	solved.

	* check_netlist.cpp: Passing equations, their checker and
	solver to the root environment.

2006-09-17  Stefan Jahn  <stefan@lkcc.org>

	* parse_netlist.y, check_netlist.cpp: Preparations to have
	equations inside subcircuits.

2006-09-11  Stefan Jahn  <stefan@lkcc.org>
