@@ -1,3 +1,9 @@
+2007-02-03  Stefan Jahn  <stefan@lkcc.org>
+
+	* vprobe.cpp: Saving both real and imaginary part of the
+	voltage across of the voltage probe.  Fixes the values
+	given during AC analysis.
+
 2007-01-29  Stefan Jahn  <stefan@lkcc.org>
 
 	* tline4p.cpp, twistedpair.cpp: Fixed S-parameter calculation.
